--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>关系查询</title>
+    <title>路径查询</title>
   </head>
   <body>
     <script src="https://retcode.alicdn.com/retcode/bl.js"></script>
